# fastapi-vite-template

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  main.py  pyproject.toml
app/: __init__.py  api.py  config.py
app/db/: init_db.py  session.py
app/db/model/: __init__.py  base.py  pat.py  user.py
app/router/: __init__.py  aios_task.py  gateway.py  pat.py  user.py
app/schema/: __init__.py  aios_task.py  aios_token_exchange.py  base.py  pat.py
app/service/: aios_task.py  aios_token_exchange.py  gateway.py  logto.py  logto_pat.py  pat.py  user.py
frontend/: .env.example  index.html  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  table.tsx  textarea.tsx
scripts/: init-project.sh
